--- a/app/views/home/contact.html
+++ b/app/views/home/contact.html
@@ -5,7 +5,7 @@
       <div class="grid_9">
         <h1>
           <a href="index.html">
-            <%= image_tag("gpk_logo.png", :alt => "Ghar Pe Khaana" ,:style =>"width:550px; margin-top:10px;")%>
+            <%#= image_tag("gpk_final.png", :alt => "Ghar Pe Khaana" ,:style =>"width:400px;")%>
           </a>
         </h1>
       </div>
@@ -17,7 +17,7 @@
     <div class="container_12">
         <div class="row">
           <center>
-           <%= image_tag "coming-soon.png", :style => "width:450px;", :align => "middle"  %>
+           <%= image_tag "coming-soon.png", :style => "width:500px;", :align => "middle"  %>
           </center>
 <!--            <div class="grid_12">
                 <h2>Latest reviews:</h2>
