--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,24 +1,21 @@
 <!--=======content================================-->
-<header>
-  <div class="container_12">
-    <div class="row h-main">
-      <div class="grid_9">
-        <h1>
-          <a href="index.html">
-            <%= image_tag("gpk_logo.png", :alt => "Ghar Pe Khaana" ,:style =>"width:550px; margin-top:10px;")%>
-          </a>
-        </h1>
-      </div>
-    </div>
-  </div>
-</header>
-
 <section class="content">
     <div class="container_12">
         <div class="row">
+          <div style="float:right; margin: 20px;">
+            Contact Us: +91 8982424436
+          </div>
+          <div style ="clear: both"></div>
           <center>
-           <%= image_tag "coming-soon.png", :style => "width:450px;", :align => "middle"  %>
-          </center>
+          <h1>
+            <a href="index.html">
+              <%= image_tag("logo-1.png", :alt => "Ghar Pe Khaana" ,:style =>"width:600px; margin-top:55px;")%>
+            </a>
+          </h1>
+          <div class="grid_12 f-logo" style ="margin-bottom:55px">
+            Coming Soon...
+          </div>
+       </center>
 <!--            <div class="grid_12">
                 <h2>Latest reviews:</h2>
                 <div class="list_carousel responsive clearfix">
