--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,14 @@
 
 <html lang="en">
   <head>
-    <title>GPK</title>
+    <title>Ghar Pe Khaana</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/superfish.css">
+     <%= csrf_meta_tags %>
   </head>
   <body class="page-1">
   <!--==============================header=================================-->
