--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <%= stylesheet_link_tag    "application", :media => "all" %>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/superfish.css">
